# lantern

./: .dockerignore  .eslintrc.cjs  .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  demo.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tsconfig.base.json  vitest.workspace.ts
.github/workflows/: ci.yml  claude.yml  release.yml
benchmarks/: lantern.yaml  run.sh
benchmarks/k6/: batch-size-scaling.js  ingest-throughput.js  lib.js  mixed-workload.js
docker/: Dockerfile.api  Dockerfile.ingest  docker-compose.dev.yml  docker-compose.yml
docs/: _sidebar.json  concepts.md  enterprise.md  getting-started.md  sdk-reference.md  self-hosting.md
docs/explanation/: architecture.md  pricing-and-plans.md  security.md  tracing-model.md
docs/how-to/: configure-sso.md  detect-pii.md  export-compliance.md  manage-teams.md  monitor-costs.md  set-up-alerts.md  troubleshooting.md  use-llm-proxy.md
docs/integrations/: anthropic.md  autogen.md  bedrock.md  cohere.md  crewai.md  dspy.md  google.md  haystack.md  langchain.md  llamaindex.md  mastra.md  mcp.md  mistral.md  openai-agents.md  openai-compatible.md  openai.md  overview.md  pydantic-ai.md  smolagents.md  vercel-ai.md
docs/reference/: api.md  configuration.md  ingest-api.md  proxy.md  sdk-python.md  sdk-typescript.md
sdk-python/: README.md  pyproject.toml
sdk-python/src/lantern_ai/: __init__.py  span.py  tracer.py  types.py
sdk-python/src/lantern_ai/collectors/: __init__.py  anthropic.py  autogen.py  crewai.py  dspy.py  haystack.py  openai.py  pydantic_ai.py  smolagents.py
sdk-python/src/lantern_ai/exporters/: __init__.py  base.py  console.py  lantern.py
sdk-python/tests/: conftest.py  test_collector_anthropic.py  test_collector_autogen.py  test_collector_crewai.py  test_collector_dspy.py  test_collector_haystack.py  test_collector_openai.py  test_collector_pydantic_ai.py  test_collector_smolagents.py  test_exporter_console.py  test_exporter_lantern.py  test_span.py  test_tracer.py  test_types.py
site/: index.html  robots.txt  sitemap.xml
(+25 files in other folders)
