[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lantern-ai"
version = "0.1.0"
description = "Python SDK for Lantern agent observability"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["httpx>=0.24.0"]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
openai = ["openai>=1.0.0"]
all = ["anthropic>=0.25.0", "openai>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/lantern_ai"]
